--- a/cleaning_data.ipynb
+++ b/cleaning_data.ipynb
@@ -146,6 +146,32 @@
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "Student ID       8\n",
+       "student_name     8\n",
+       "gender           8\n",
+       "grade            8\n",
+       "reading_score    7\n",
+       "math_score       7\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "missing_grade_df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -242,7 +268,7 @@
        "7           7       Nicole Baker      F  12th           96.0        69.0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +443,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -431,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
